# otel-metrics-test

./: .gitignore  DAEMONSET-WHY-HOW.md  Dockerfile  README.md  docker-compose.yaml  otel-collector-config.yml  prometheus.yml  pyproject.toml  requirements.txt
helm/otel-metrics-test/: Chart.yaml  deploy-to-gcp.md  k8s-deployment.yaml  otel-collector-config.yaml  values-agent.yaml  values.yaml
helm/otel-metrics-test/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  otel-configmap.yaml  prometheus.yaml  service.yaml
helm/otel-metrics-test/templates/tests/: test-connection.yaml
src/: main.py
src/tests/: test_main.py
